--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+// Aplicação
 spring.application.name=locatech
+
+// Caminho do banco de dados
+spring.datasource.url=jdbc:h2:mem:locatech
+
+// Driver
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
